Fix white space in footer

--- a/style.css
+++ b/style.css
@@ -2,6 +2,3 @@ body {
     padding-top: 120px;
 }
 
-.card {
-    max-width: 800px;
-}
